2004-12-02 Magnus Hagdorn
 * merged in eismint_1: this should fix all (most) EISMINT problems
   the GLINT-GLIDE_eismint should be considered stable, all interesting
   stuff will go on on the GLINT-GLIDE branch
 * removed lwe from standard names since mass balance and meltrate are
   measured in ice rather than liquid-water-equiv.
 
2004-11-28 Magnus Hagdorn
 * added description of non-linear solver

2004-11-25 Magnus Hagdorn
 * expanded section on vertical velos and added some figures

2004-11-18 Magnus Hagdorn
 * updated numercs documentation to include mechanics

2004-11-15 Magnus Hagdorn
 * added temperature solver documentation

2004-11-10 Magnus Hagdorn
 * ncdf_vars.def: make nc files conformant with CF standard (conformance was check with the CF
   checker http://titania.badc.rl.ac.uk/cgi-bin/cf-checker.pl, and passed except for the new
   standard names which are not yet part of CF but will be from 2004-11-15)

2004-09-27 Magnus Hagdorn
 * removed masking of netCDF variables. This causes more pain than it is worth it. The two 
   files are tagged (generate_ncvars.py, ncdf_vars.def)

2004-09-27 Magnus Hagdorn
 * glimmer_temp.f90: applied Tony's fix for floating ice temperature problem
   see http://forge.nesc.ac.uk/pipermail/glimmer-discuss/2004-September/000041.html
	
2004-09-27 Magnus Hagdorn
 * split up main time step into two parts so that we can write data before
   ice thicknesses are updated (glint_timestep.f90, glide_types.f90, simple_glide.f90, eis_glide.f90, glint_timestep.f90)
 * updated doc (glide.dia, glide.eps)
	
2004-09-22 Magnus Hagdorn
 * new continentality calculations (eis_cony.f90, glimmer_searchcircle.f90, eis_forcing.f90
 * eis_ela.f90: distinguish between maritime and continental mass balance
 * eis specific netCDF I/O (eis_io.f90.in, eis_glide.f90, ncdf_vars.def)
 * eis_types.f90: split out type definition to avoid circular dependency
 * Makefile: updated accordingly
	
2004-09-21 Magnus Hagdorn